convert img to webp

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <div class="card__body">
                   <div class="card__body-head">
                     <div class="ava">
-                      <img src="/img/1.png" alt="image" />
+                      <img src="/img/1.webp" alt="image" />
                     </div>
                     <div class="name">
                       <h3>CRYSTAL MOTORS</h3>
@@ -196,7 +196,7 @@
                 <div class="card__body">
                   <div class="card__body-head">
                     <div class="ava">
-                      <img src="/img/1.png" alt="image" />
+                      <img src="/img/1.webp" alt="image" />
                     </div>
                     <div class="name">
                       <h3>CRYSTAL MOTORS</h3>
@@ -251,7 +251,7 @@
                 <div class="card__body">
                   <div class="card__body-head">
                     <div class="ava">
-                      <img src="/img/1.png" alt="image" />
+                      <img src="/img/1.webp" alt="image" />
                     </div>
                     <div class="name">
                       <h3>CRYSTAL MOTORS</h3>
@@ -306,7 +306,7 @@
                 <div class="card__body">
                   <div class="card__body-head">
                     <div class="ava">
-                      <img src="/img/1.png" alt="image" />
+                      <img src="/img/1.webp" alt="image" />
                     </div>
                     <div class="name">
                       <h3>CRYSTAL MOTORS</h3>
@@ -361,7 +361,7 @@
                 <div class="card__body">
                   <div class="card__body-head">
                     <div class="ava">
-                      <img src="/img/1.png" alt="image" />
+                      <img src="/img/1.webp" alt="image" />
                     </div>
                     <div class="name">
                       <h3>CRYSTAL MOTORS</h3>
@@ -416,7 +416,7 @@
                 <div class="card__body">
                   <div class="card__body-head">
                     <div class="ava">
-                      <img src="/img/1.png" alt="image" />
+                      <img src="/img/1.webp" alt="image" />
                     </div>
                     <div class="name">
                       <h3>CRYSTAL MOTORS</h3>
@@ -474,7 +474,7 @@
                 <div class="company__card">
                   <div class="company__card-top">
                     <div class="company__card-ava">
-                      <img src="/img/1.png" alt="ava" />
+                      <img src="/img/1.webp" alt="ava" />
                     </div>
                     <div class="company__card-info">
                       <h4>CRYSTAL MOTORS</h4>
@@ -493,7 +493,7 @@
                 <div class="company__card">
                   <div class="company__card-top">
                     <div class="company__card-ava">
-                      <img src="/img/1.png" alt="ava" />
+                      <img src="/img/1.webp" alt="ava" />
                     </div>
                     <div class="company__card-info">
                       <h4>CRYSTAL MOTORS</h4>
@@ -512,7 +512,7 @@
                 <div class="company__card">
                   <div class="company__card-top">
                     <div class="company__card-ava">
-                      <img src="/img/1.png" alt="ava" />
+                      <img src="/img/1.webp" alt="ava" />
                     </div>
                     <div class="company__card-info">
                       <h4>CRYSTAL MOTORS</h4>
