Added dynamic addition of cards with data from JSON

--- a/index.html
+++ b/index.html
@@ -133,337 +133,7 @@
           </div>
 
           <div class="content__body">
-            <div class="content__body-cards">
-              <div class="content__body-card card">
-                <div class="card__head high-rating">
-                  <p>Высокий рейтинг доверия</p>
-                </div>
-
-                <div class="card__body">
-                  <div class="card__body-head">
-                    <div class="ava">
-                      <img src="/img/1.webp" alt="image" />
-                    </div>
-                    <div class="name">
-                      <h3>CRYSTAL MOTORS</h3>
-                      <div class="name__review">
-                        <img src="/img/rating-star.svg" alt="rating" />
-                        <p>4,9 <span>246 отзывов</span></p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card__body-info">
-                    <div class="info-table">
-                      <div class="info-row">
-                        <div class="info-cell label">Город:</div>
-                        <div class="info-cell value">Челябинск</div>
-                      </div>
-                      <div class="info-row">
-                        <div class="info-cell label">Адрес:</div>
-                        <div class="info-cell value">
-                          Университетская Набережная, 68
-                        </div>
-                      </div>
-                      <div class="info-row">
-                        <div class="info-cell label">Телефон:</div>
-                        <div class="info-cell value">
-                          <a href="tel:+73512207813">+7 (351) 220-78-13</a>
-                        </div>
-                      </div>
-                      <div class="info-row">
-                        <div class="info-cell label">Сайт:</div>
-                        <div class="info-cell value">
-                          <a href="http://crystal-motors.ru" target="_blank"
-                            >crystal-motors.ru</a
-                          >
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card__body-btns">
-                    <a href="#" class="btn btn-learn-more">Подробнее</a>
-                    <a href="#" class="btn btn-link"
-                      ><img src="/img/link-icon.svg" alt="link icon"
-                    /></a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="content__body-card card">
-                <div class="card__head negative-rating">
-                  <p>Высокий рейтинг доверия</p>
-                </div>
-
-                <div class="card__body">
-                  <div class="card__body-head">
-                    <div class="ava">
-                      <img src="/img/1.webp" alt="image" />
-                    </div>
-                    <div class="name">
-                      <h3>CRYSTAL MOTORS</h3>
-                      <div class="name__review">
-                        <img src="/img/rating-star.svg" alt="rating" />
-                        <p>4,9 <span>246 отзывов</span></p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card__body-info">
-                    <div class="info-table">
-                      <div class="info-row">
-                        <div class="info-cell label">Город:</div>
-                        <div class="info-cell value">Челябинск</div>
-                      </div>
-                      <div class="info-row">
-                        <div class="info-cell label">Адрес:</div>
-                        <div class="info-cell value">
-                          Университетская Набережная, 68
-                        </div>
-                      </div>
-                      <div class="info-row">
-                        <div class="info-cell label">Телефон:</div>
-                        <div class="info-cell value">
-                          <a href="tel:+73512207813">+7 (351) 220-78-13</a>
-                        </div>
-                      </div>
-                      <div class="info-row">
-                        <div class="info-cell label">Сайт:</div>
-                        <div class="info-cell value">
-                          <a href="http://crystal-motors.ru" target="_blank"
-                            >crystal-motors.ru</a
-                          >
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card__body-btns">
-                    <a href="#" class="btn btn-learn-more">Подробнее</a>
-                    <a href="#" class="btn btn-link"
-                      ><img src="/img/link-icon.svg" alt="link icon"
-                    /></a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="content__body-card card">
-                <div class="card__head few-rating">
-                  <p>Высокий рейтинг доверия</p>
-                </div>
-
-                <div class="card__body">
-                  <div class="card__body-head">
-                    <div class="ava">
-                      <img src="/img/1.webp" alt="image" />
-                    </div>
-                    <div class="name">
-                      <h3>CRYSTAL MOTORS</h3>
-                      <div class="name__review">
-                        <img src="/img/rating-star.svg" alt="rating" />
-                        <p>4,9 <span>246 отзывов</span></p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card__body-info">
-                    <div class="info-table">
-                      <div class="info-row">
-                        <div class="info-cell label">Город:</div>
-                        <div class="info-cell value">Челябинск</div>
-                      </div>
-                      <div class="info-row">
-                        <div class="info-cell label">Адрес:</div>
-                        <div class="info-cell value">
-                          Университетская Набережная, 68
-                        </div>
-                      </div>
-                      <div class="info-row">
-                        <div class="info-cell label">Телефон:</div>
-                        <div class="info-cell value">
-                          <a href="tel:+73512207813">+7 (351) 220-78-13</a>
-                        </div>
-                      </div>
-                      <div class="info-row">
-                        <div class="info-cell label">Сайт:</div>
-                        <div class="info-cell value">
-                          <a href="http://crystal-motors.ru" target="_blank"
-                            >crystal-motors.ru</a
-                          >
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card__body-btns">
-                    <a href="#" class="btn btn-learn-more">Подробнее</a>
-                    <a href="#" class="btn btn-link"
-                      ><img src="/img/link-icon.svg" alt="link icon"
-                    /></a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="content__body-card card">
-                <div class="card__head negative-rating">
-                  <p>Высокий рейтинг доверия</p>
-                </div>
-
-                <div class="card__body">
-                  <div class="card__body-head">
-                    <div class="ava">
-                      <img src="/img/1.webp" alt="image" />
-                    </div>
-                    <div class="name">
-                      <h3>CRYSTAL MOTORS</h3>
-                      <div class="name__review">
-                        <img src="/img/rating-star.svg" alt="rating" />
-                        <p>4,9 <span>246 отзывов</span></p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card__body-info">
-                    <div class="info-table">
-                      <div class="info-row">
-                        <div class="info-cell label">Город:</div>
-                        <div class="info-cell value">Челябинск</div>
-                      </div>
-                      <div class="info-row">
-                        <div class="info-cell label">Адрес:</div>
-                        <div class="info-cell value">
-                          Университетская Набережная, 68
-                        </div>
-                      </div>
-                      <div class="info-row">
-                        <div class="info-cell label">Телефон:</div>
-                        <div class="info-cell value">
-                          <a href="tel:+73512207813">+7 (351) 220-78-13</a>
-                        </div>
-                      </div>
-                      <div class="info-row">
-                        <div class="info-cell label">Сайт:</div>
-                        <div class="info-cell value">
-                          <a href="http://crystal-motors.ru" target="_blank"
-                            >crystal-motors.ru</a
-                          >
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card__body-btns">
-                    <a href="#" class="btn btn-learn-more">Подробнее</a>
-                    <a href="#" class="btn btn-link"
-                      ><img src="/img/link-icon.svg" alt="link icon"
-                    /></a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="content__body-card card">
-                <div class="card__head few-rating">
-                  <p>Высокий рейтинг доверия</p>
-                </div>
-
-                <div class="card__body">
-                  <div class="card__body-head">
-                    <div class="ava">
-                      <img src="/img/1.webp" alt="image" />
-                    </div>
-                    <div class="name">
-                      <h3>CRYSTAL MOTORS</h3>
-                      <div class="name__review">
-                        <img src="/img/rating-star.svg" alt="rating" />
-                        <p>4,9 <span>246 отзывов</span></p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card__body-info">
-                    <div class="info-table">
-                      <div class="info-row">
-                        <div class="info-cell label">Город:</div>
-                        <div class="info-cell value">Челябинск</div>
-                      </div>
-                      <div class="info-row">
-                        <div class="info-cell label">Адрес:</div>
-                        <div class="info-cell value">
-                          Университетская Набережная, 68
-                        </div>
-                      </div>
-                      <div class="info-row">
-                        <div class="info-cell label">Телефон:</div>
-                        <div class="info-cell value">
-                          <a href="tel:+73512207813">+7 (351) 220-78-13</a>
-                        </div>
-                      </div>
-                      <div class="info-row">
-                        <div class="info-cell label">Сайт:</div>
-                        <div class="info-cell value">
-                          <a href="http://crystal-motors.ru" target="_blank"
-                            >crystal-motors.ru</a
-                          >
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card__body-btns">
-                    <a href="#" class="btn btn-learn-more">Подробнее</a>
-                    <a href="#" class="btn btn-link"
-                      ><img src="/img/link-icon.svg" alt="link icon"
-                    /></a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="content__body-card card">
-                <div class="card__head high-rating">
-                  <p>Высокий рейтинг доверия</p>
-                </div>
-
-                <div class="card__body">
-                  <div class="card__body-head">
-                    <div class="ava">
-                      <img src="/img/1.webp" alt="image" />
-                    </div>
-                    <div class="name">
-                      <h3>CRYSTAL MOTORS</h3>
-                      <div class="name__review">
-                        <img src="/img/rating-star.svg" alt="rating" />
-                        <p>4,9 <span>246 отзывов</span></p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card__body-info">
-                    <div class="info-table">
-                      <div class="info-row">
-                        <div class="info-cell label">Город:</div>
-                        <div class="info-cell value">Челябинск</div>
-                      </div>
-                      <div class="info-row">
-                        <div class="info-cell label">Адрес:</div>
-                        <div class="info-cell value">
-                          Университетская Набережная, 68
-                        </div>
-                      </div>
-                      <div class="info-row">
-                        <div class="info-cell label">Телефон:</div>
-                        <div class="info-cell value">
-                          <a href="tel:+73512207813">+7 (351) 220-78-13</a>
-                        </div>
-                      </div>
-                      <div class="info-row">
-                        <div class="info-cell label">Сайт:</div>
-                        <div class="info-cell value">
-                          <a href="http://crystal-motors.ru" target="_blank"
-                            >crystal-motors.ru</a
-                          >
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card__body-btns">
-                    <a href="#" class="btn btn-learn-more">Подробнее</a>
-                    <a href="#" class="btn btn-link"
-                      ><img src="/img/link-icon.svg" alt="link icon"
-                    /></a>
-                  </div>
-                </div>
-              </div>
-            </div>
+            <div id="cards-container" class="content__body-cards"></div>
           </div>
         </div>
         <aside class="sidebar">
