function for showing cards

--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@
 
           <div class="content__body">
             <div id="cards-container" class="content__body-cards"></div>
+
+             <div id="show-more-product" class="btn__show-more">Показать ещё</div> 
           </div>
         </div>
         <aside class="sidebar">
